// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VInput.js should generate an icon and match snapshot 1`] = `

<div class="v-input theme--light">
  <div class="v-input__prepend-outer">
    <div class="v-input__icon v-input__icon--prepend">
      <i aria-hidden="true"
         class="icon material-icons"
      >
        list
      </i>
    </div>
  </div>
  <div class="v-input__control">
    <div class="v-input__wrapper"
         style="height: 32px;"
    >
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`VInput.js should generate an icon and match snapshot 2`] = `

<div class="v-input theme--light">
  <div class="v-input__control">
    <div class="v-input__wrapper"
         style="height: 32px;"
    >
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
  <div class="v-input__append-outer">
    <div class="v-input__icon v-input__icon--append"
         style
    >
      <i aria-hidden="true"
         class="icon material-icons"
      >
        list
      </i>
    </div>
  </div>
</div>

`;

exports[`VInput.js should generate append and prepend slots 1`] = `

<div class="v-input theme--light">
  <div class="v-input__prepend-outer">
    <div>
      prepend-icon
    </div>
  </div>
  <div class="v-input__control">
    <div class="v-input__wrapper"
         style="height: 32px;"
    >
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`VInput.js should generate append and prepend slots 2`] = `

<div class="v-input theme--light">
  <div class="v-input__control">
    <div class="v-input__wrapper"
         style="height: 32px;"
    >
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`VInput.js should generate append and prepend slots 3`] = `

<div class="v-input theme--light">
  <div class="v-input__prepend-outer">
    <div>
      prepend
    </div>
  </div>
  <div class="v-input__control">
    <div class="v-input__wrapper"
         style="height: 32px;"
    >
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>

`;

exports[`VInput.js should generate append and prepend slots 4`] = `

<div class="v-input theme--light">
  <div class="v-input__control">
    <div class="v-input__wrapper"
         style="height: 32px;"
    >
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
  <div class="v-input__append-outer">
    <div>
      append
    </div>
  </div>
</div>

`;

exports[`VInput.js should not generate input details 1`] = `

<div class="v-input theme--light">
  <div class="v-input__control">
    <div class="v-input__wrapper"
         style="height: 32px;"
    >
    </div>
  </div>
</div>

`;
